--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,17 @@
-# Dependencies
-node_modules/
-*/node_modules/
-
-# Build outputs
+# never commit build artifacts
 dist/
 build/
 out/
 .next/
-
-# Environment files
-.env
-.env.*
-!.env.example
-
-# Cache directories
 .cache/
-.vercel/
-.vscode/
-.idea/
-
-# Log files
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# OS generated files
+.sass-cache/
+coverage/
+# media & uploads must live in CDN, not git
+uploads/
+static/uploads/
+sites/*/sitemaps/
+# deps
+node_modules/
+# OS/editor
 .DS_Store
-Thumbs.db
-
-# Deployment files
-efh-*
-*.zip
-*.tar.gz
-
-# Legacy/backup files
-.legacy-servers/
-.migration_temp_*/
-attached_assets/
-data/fixtures/
-
-# Large files and exports
-complete-project-export.txt
-complete-file-list.txt
-core.*
-*.core
-*.dump
-deploy/archives/
-branding/raw/
-images/raw/
-
-# Sensitive files
-*secret*
-*key*
-*token*
-*password*
-*AIza*
-*curvaturebodysculpting*
-
-coverage
-stats.html
+*.log
