feat: Complete Netlify Functions architecture for 95k+ pages
- Add comprehensive Netlify Functions for serverless architecture
- page-odb.ts: On-demand page generation with Supabase integration
- r2-proxy.ts: Cloudflare R2 asset proxy for massive file storage
- api-proxy.ts: Replit backend proxy with Supabase failover
- sitemap-cron.ts: Automated sitemap generation via GitHub dispatch
- Update netlify.toml with complete routing and caching strategy

This enables the 95k+ page generation system through:
- Dynamic page rendering from Supabase database
- Asset serving from Cloudflare R2
- API failover between Replit and Supabase Edge Functions
- Automated sitemap generation for massive content

Co-authored-by: Ona <no-reply@ona.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,34 @@
 [build]
-  command = "./build-deploy.sh"
-  publish = "deploy"
+  command = "npm run build"
+  publish = "dist"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "20"
   SECRETS_SCAN_SMART_DETECTION_ENABLED = "false"
 
-# Domain redirects handled in _redirects file to avoid conflicts
+# Long-tail pages: first-hit builds, then cached at CDN
+[[redirects]]
+  from = "/page/*"
+  to = "/.netlify/functions/page-odb"
+  status = 200
 
-# Pass through built assets
+# R2 assets (HTML fragments, PDFs, images) via proxy
 [[redirects]]
   from = "/assets/*"
-  to = "/assets/:splat"
+  to = "/.netlify/functions/r2-proxy"
+  status = 200
+
+# API proxy to Replit with failover to Supabase Edge Function
+[[redirects]]
+  from = "/api/*"
+  to = "/.netlify/functions/api-proxy"
+  status = 200
+
+# Sitemap served from R2
+[[redirects]]
+  from = "/sitemap.xml"
+  to = "/assets/sitemaps/sitemap.xml"
   status = 200
 
 # Modern clean URL redirects
@@ -116,3 +133,8 @@
   for = "*.js"
   [headers.values]
     Cache-Control = "public, max-age=31536000"
+
+# Nightly cron (03:00 UTC) — triggers sitemap generation via repository_dispatch
+[[scheduled.functions]]
+  name = "sitemap-cron"
+  cron = "0 3 * * *"
